--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -25,7 +25,7 @@ services:
     command: /bin/bash run.sh
     working_dir: /app
     volumes:
-      - ./ghi:/app
+      - ./frontend:/app
     ports:
       - "3000:3000"
     environment:
