--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,7 +7,7 @@ services:
     environment:
       CORS_HOST: http://localhost:3000
       DATABASE_URL: postgresql://league:legends@postgres/lolboost
-      # SIGNING_KEY: ${SIGNING_KEY}
+      SIGNING_KEY: ${SIGNING_KEY}
       WAIT_HOSTS: postgres:5432
       WAIT_BEFORE: 5
       WAIT_TIMEOUT: 60
@@ -33,7 +33,7 @@ services:
       NODE_ENV: development
       HOST: "0.0.0.0"
       PUBLIC_URL: ${PUBLIC_URL}
-      REACT_APP_API_HOST: http://localhost:8000
+      REACT_APP_API_HOST: ${REACT_APP_API_HOST}
 
   postgres:
     image: postgres:14.5-bullseye
