--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -1,4 +1,4 @@
-bycrypt==4.0.1
+bcrypt==4.0.1
 fastapi[all]>=0.92.0
 jwtdown-fastapi>=0.5.0
 Pillow==8.4.0
@@ -6,4 +6,3 @@ uvicorn[standard]==0.17.6
 pytest==7.4.4
 psycopg[binary,pool]==3.1.17
 pydantic==1.10.14
-Pillow
