--- a/ghi/package.json
+++ b/ghi/package.json
@@ -6,6 +6,7 @@
     "@galvanize-inc/jwtdown-for-react": "^0.2.4",
     "@headlessui/react": "^1.7.18",
     "@heroicons/react": "^2.1.3",
+    "@material-tailwind/react": "^2.1.9",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
