--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,8 @@
 {
+    "editor.formatOnPaste": true,
+    "python.formatting.provider": "black",
+    "editor.formatOnSave": true,
+    "editor.defaultFormatter": "ms-python.black-formatter",
     "cSpell.words": [
         "EUNE",
         "jwtdown",
@@ -7,5 +11,8 @@
         "passwordconf",
         "pydantic",
         "riotid"
-    ]
+    ],
+    "[javascript]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
+    }
 }
