finished style of orderform

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,18 +1,79 @@
 {
-    "editor.formatOnPaste": true,
-    "python.formatting.provider": "black",
-    "editor.formatOnSave": true,
-    "editor.defaultFormatter": "ms-python.black-formatter",
-    "cSpell.words": [
-        "EUNE",
-        "jwtdown",
-        "Listbox",
-        "loginform",
-        "passwordconf",
-        "pydantic",
-        "riotid"
+  "security.workspace.trust.untrustedFiles": "open",
+  "workbench.colorTheme": "One Darker Pro Vivid",
+  "workbench.iconTheme": "vscode-jetbrains-icon-theme-2023-auto",
+  "tabnine.experimentalAutoImports": true,
+  "cSpell.userWords": [
+    "fastapi",
+    "grimz",
+    "headlessui",
+    "heroicons"
+  ],
+  "javascript.updateImportsOnFileMove.enabled": "always",
+  "files.autoSave": "onFocusChange",
+  "editor.defaultFormatter": "ms-python.black-formatter",
+  "editor.formatOnSave": true,
+  "editor.unicodeHighlight.allowedCharacters": {
+    "’": true
+  },
+  "djlint.enableLinting": true,
+  "djlint.ignore": [
+    "H014",
+    "H006",
+    "H012",
+    "H025",
+    "H009",
+    "H005"
+  ],
+  "editor.tokenColorCustomizations": {
+    "textMateRules": [
+      {
+        "name": "One Dark italic",
+        "scope": [
+          "comment",
+          "entity.other.attribute-name",
+          "keyword",
+          "markup.underline.link",
+          "storage.modifier",
+          "storage.type",
+          "string.url",
+          "variable.language.super",
+          "variable.language.this"
+        ],
+        "settings": {
+          "fontStyle": "italic"
+        }
+      },
+      {
+        "name": "One Dark italic reset",
+        "scope": [
+          "keyword.operator",
+          "keyword.other.type",
+          "storage.modifier.import",
+          "storage.modifier.package",
+          "storage.type.built-in",
+          "storage.type.function.arrow",
+          "storage.type.generic",
+          "storage.type.java",
+          "storage.type.primitive"
+        ],
+        "settings": {
+          "fontStyle": ""
+        }
+      }
+    ]
+  },
+  "indentRainbow.ignoreErrorLanguages": [
+    "markdown",
+    "python"
     ],
-    "[javascript]": {
-    "editor.defaultFormatter": "esbenp.prettier-vscode"
-    }
+  "editor.indentSize": "tabSize",
+  "cSpell.words": [
+    "jwtdown",
+    "Listbox",
+    "loginform",
+    "passwordconf",
+    "playstyle",
+    "riotid"
+  ]
 }
